kubernetes/apps/dev/superset/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: superset
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`superset.toskbot.xyz`)
      kind: Rule
      services:
        - name: superset
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: superset.toskbot.xyz
